@@ -1,3 +1,10 @@
+2012-08-29  Peter Bergner  <bergner@vnet.ibm.com>
+
+	Backport from mainline
+	2012-08-29  Peter Bergner  <bergner@vnet.ibm.com>
+	* ppc-opc.c (VXASHB_MASK): New define.
+	(powerpc_opcodes) <vsldoi>: Use VXASHB_MASK.
+
 2012-08-28  Peter Bergner  <bergner@vnet.ibm.com>
 
 	Backport from mainline
